# bb-finetune

./: .gitignore  README.md  inference.py  ppo.py  pyproject.toml  requirements.txt  reward.py  reward_model_test.py  setup.sh  setup_5090.sh  sft.py  sft_model_test.py  ssh.sh  utils.py  week6.py
.streamlit/: config.toml
aj/: instruct_ppo_model_test.py  instruct_sft_model_test.py  manual_reward_model_test.py  manual_sft_model_test.py  qwen_ppo_instruct.py  qwen_sft.py  qwen_sft_instruct.py  qwen_sft_manual.py  reward_model.py  reward_model_manual.py  reward_model_test.py  rl_ppo_model.py  rl_ppo_model_manual.py  sft_model_test.py  sft_test.py
ben_dev/: README.md  pyproject.toml  simple_download.py
ben_dev/misc/: blog_post.ipynb  blog_post_lora.ipynb  extra_week6_slides.md  flax_model_print.txt  lora_inspect.py  lora_simple-data.py  lora_simple.py  test_jax.py
slides/: slides.md
